[package]
name = "enaia_client"
version = "0.1.0"
edition = "2021"

[dependencies]
naia-client-socket = { version = "0.20.1", features = ["wbindgen"] }
naia-socket-shared = "0.20.0"
rusty_enet = { git = "https://github.com/jabuwu/rusty_enet", rev = "80db6cb24bee3480f01b6da38b1d65415d9dd10d" }

[dev-dependencies]
bevy = "0.12.0"
web-time = "0.2.3"
