[package]
name = "enaia_client"
version = "0.1.0"
edition = "2021"

[dependencies]
naia-client-socket = { version = "0.20.1", features = ["wbindgen"] }
naia-socket-shared = "0.20.0"
rusty_enet = { git = "https://github.com/jabuwu/rusty_enet", rev = "dca889b30b350c9ca63f9a0b67d46328cfda4f37" }

[dev-dependencies]
bevy = "0.12.0"
web-time = "0.2.3"
