[package]
name = "webrtc_proxy_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
enaia_server.path = "../enaia_server"
rusty_enet = { git = "https://github.com/jabuwu/rusty_enet", rev = "80db6cb24bee3480f01b6da38b1d65415d9dd10d" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
