[package]
name = "webrtc_proxy_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
enaia_server.path = "../enaia_server"
rusty_enet = { git = "https://github.com/jabuwu/rusty_enet", rev = "dca889b30b350c9ca63f9a0b67d46328cfda4f37" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
